name:                ws-test
version:             0.1.0.0
author:              Daniel Choi
maintainer:          dhchoi@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable ws-test
  main-is:             Main.hs
  hs-source-dirs:      .
  build-depends:       base >=4.7 && <5.0
                     , text
                     , wai-websockets
                     , wai
                     , websockets
                     , http-types
                     , bytestring
                     , wai-extra >= 3.0.19
                     , wai-middleware-static
                     , warp
                     , time

  default-language:  Haskell2010
  ghc-options:       -threaded -fno-warn-orphans
